<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Spirit</string>
    <string name="LANG_NOSOUNDSFOUND">any sound-file found on your SD</string>
    <string name="LANG_RANDOMSOUND">random file</string>
    <string name="LANG_EVENTREMINDING">Event-Reminding</string>
    <string name="LANG_SPIRITFORANDROID">Spirit for Android</string>
    <string name="LANG_ABOUTTEXT">Programmed by Michael Wodniok.\nPlease send bugs and ideas to michix5d@gmail.com. Please send destructive critic and so on to someone else.\n\nDevelopment together with the PaDS-Lab at FH Schmalkalden. Thanks to Stefan Kunze (alias: kunze) and Marcus Denison (alias: fattrat) for writing a REST-Service and Spirit-Platform. Without that services would it be very hard or even impossible to write this app. Additionally thanks to "Watchdog Skytower" for publishing at Google Play and Lynus Apel, Michael Dragunski, Philip Ekert and Siegmund Wodniok for every-day-tests.\n\nUsed tools:\n- Eclipse Juno\n- Oracle JDK 7\n- Eclipse JDT\n- Eclipse ADT\n- Android SDK Rev. 20\n- Inkscape</string>
	<string name="LANG_SAVE">save</string>
	<string name="LANG_NEWS">News:</string>
	<string name="LANG_SETTINGSCLASSDESCRIPTION">If you want to use the schedule, you have to set your course here:</string>
	<string name="LANG_DOWNLOADSCHEDULENOW">download schedule now</string>
	<string name="LANG_SELECTEVENTTOSETGROUP">For following events you can set a group-filter:</string>
	<string name="LANG_STOPALARM">Shutup the alarm:</string>
	<string name="LANG_TODAY">today</string>
	<string name="LANG_YESTERDAY">yesterday</string>
	<string name="LANG_TOMORROW">tomorrow</string>
	<string name="LANG_ON_DAY">on</string>
	<string name="LANG_PENETRANTMODE">penetrant mode</string>
	<string name="LANG_WARNING">Attention!</string>
	<string name="LANG_PENETRANTMODEWARNING">The "penetrant mode" is enabled. In this mode, the alarm only can shut up if you select the right answer for a really simple mathematical exercise. Alternatively you can kill the app or your phone. Additionally, you cannot varry the sound-volume.</string>
	<string name="LANG_OK">OK</string>
	<string name="LANG_SEMESTERCHANGE">Semesterchange</string>
	<string name="LANG_SEMESTERCHANGELONG">It seems so, that a new semester has started. Maybe you have to set some new settings.</string>
	<string name="LANG_SCHEDULESETTINGS">schedule-settings</string>
	<string name="LANG_UPDATING">Updating&#8230;</string>
	<string name="LANG_LASTSUCCESSFULLUPDATE">Last time successfull: </string>
	<string name="LANG_NEVER">never</string>
	<string name="LANG_NOSCHEDULELOADED">Currently, there is no schedule available. Download a schedule via [MENU] > "schedule-schedule" and set there some group-filters.</string>
	<string name="LANG_COUNTDOWNDAYS">~ %1$d days at %2$s</string>
	<string name="LANG_COUNTDOWNDAY">~ one day at %2$s</string>
	<string name="LANG_NEXTEVENTIN">Next event (%s) in</string>
	<string name="LANG_CLICKTOGETBACK">Click here to get back to the countdown&#8230;</string>
	<string name="LANG_LECTURE">lecture</string>
	<string name="LANG_EXERCISE">exercise</string>
	<string name="LANG_LECTURE_S">L</string>
	<string name="LANG_EXERCISE_S">E</string>
	<string name="LANG_SHORT_EVENT_STYLE">short event-style</string>
	<string name="LANG_ALARMTEXT">%1$s\n%2$s\nin %3$s at %4$02d:%5$02d</string>
	<string name="LANG_DOWNLOADING">downloading&#8230;</string>
	<string name="LANG_ANALYSING">analysing&#8230;</string>
	<string name="LANG_SETGROUPFOREVENT">Please set a group [min. 0 (= event disabled), max. %1$d] for %2$s:</string>
	<string name="LANG_GROUPSETSUCCESSFULLY">Group successfully set.</string>
	<string name="LANG_SCHEDULEDOWNLOADEDSUCCESSFULLY">Schedule successfully refreshed.</string>
	<string name="LANG_INVALIDINPUT">Invalid input.</string>
	<string name="LANG_ERRORWHILELOADINGPLAN">A error has been occured while refreshing schedule.\n\n%1$s: %2$s</string>
	<string name="LANG_LICENSE">Welcome to the Spirit4Android-app. This app loads automatically from the Spirit-platform and shows you an actual schedule for one course. Additionally, there is a built-in alarm-function.\n\nBefore you use the app:\nThe app is under development. Before a version will be released, it will get checked but there is no warranty for a correct working app.\nWhile using the app, it will load data through the internet. This can create costs made by your provider. The app is licensed under CC-BY_SA 3.0. This expicitly allows to copy the app and give it to your friends. More details about licensing are located at acl5m.org (only german)\n\nPrivacy policy:\nThe app does not send any critical data from your phone to any of the used web servers, but the User-Agent contains the display-resolution of your phone and the version of this app for statistical uses.</string>
	<string name="LANG_ACCEPTLICENSE">i have read, understood the license terms and accept them.</string>
	<string name="LANG_DENYINGLICENSE">i have not read, not understood, disagree the terms of or dont want to read the license.</string>
	<string name="LANG_MENU_UPDATENEWS">update news now</string>
	<string name="LANG_MENU_UPDATEINFO">last success. update</string>
	<string name="LANG_MENU_SETTINGS">settings</string>
	<string name="LANG_MENU_ABOUT">about spirit4android</string>
	<string name="LANG_ALARMENABLED">alarm is enabled</string>
	<string name="LANG_ALARMDISABLED">alarm is disabled</string>
	<string name="LANG_ENABLE">enable</string>
	<string name="LANG_DISABLE">disable</string>
	<string name="LANG_ALARMDIALOGTITLE">Alarm</string>
	<string name="LANG_ALARMDIALOGTEXT">Please set the time (in minutes) the alarm should ring before your first event on a day.</string>
	<string name="LANG_WRITTENBYFOR">written at %2$s by %1$s to %3$s</string>
	<string name="LANG_ALLSEMESTERS">all semesters</string>
	<string name="LANG_EXTENDEDSCHEDULEEDITOR_TEXT">This is the extended schedule editor. In this window you can add, remove or change events. Maybe there are some events which are not for you (but for other groups). Note that this editor overwrites the normal schedule and the normal schedule overwrites this.</string>
	<string name="LANG_SETTINGS_SIMPLE">Simple Settings</string>
	<string name="LANG_SETTINGS_ALARM">Alarm</string>
	<string name="LANG_SETTINGS_ADVANCEDSCHEDULEEDITOR">Adv. Schedule-Editor</string>
	<string name="LANG_CANCEL">Cancel</string>
	<string name="LANG_ASE_TITLE">title</string>
	<string name="LANG_ASE_DOCENT">docent</string>
	<string name="LANG_ASE_DAY">weekday</string>
	<string name="LANG_ASE_ODDWEEKS">odd weeks</string>
	<string name="LANG_ASE_EVENWEEKS">even weeks</string>
	<string name="LANG_ASE_TIME">time of beginning</string>
	<string name="LANG_ASE_LENGTH">length (sec)</string>
	<string name="LANG_ASE_ROOM">room</string>
	<string name="LANG_ASE_GROUP">groupnumber</string>
	<string name="LANG_ASE_EVENTEDITOR">Event-editor</string>
	<string name="LANG_ASE_ALREADYCREATED">There is already an empty event (Sunday 0:00).</string>
	<string name="LANG_DELETE">delete</string>
	<string-array name="LANG_WEEKDAYS_SHORT">
		<item >Su</item>
		<item >Mo</item>
		<item >Tu</item>
		<item >We</item>
		<item >Th</item>
		<item >Fr</item>
		<item >Sa</item>
	</string-array>
	<string name="LANG_WEEK_ODD">odd</string>
	<string name="LANG_WEEK_EVEN">even</string>
	<string name="LANG_WEEK_SHORT">CW</string>
	<string name="LANG_ALARMENABLED_SHORT">alarm active</string>
	<string name="LANG_SPARETIMEEDITOR_TEXT">This is the Spare-Time-Editor. In a sparetime, all events will be ignored.</string>
	<string name="LANG_SETTINGS_SPARETIMEEDITOR">Sparetime-Editor</string>
	<string name="LANG_SPARETIMELOADFROMACL5M">load pre-defined sparetime from acl5m.org</string>
	<string name="LANG_STE_DESCRIPTION">description</string>
	<string name="LANG_STE_STARTDAY">day of start</string>
	<string name="LANG_STE_STARTTIME">daytime of start</string>
	<string name="LANG_STE_ENDDAY">day of end</string>
	<string name="LANG_STE_ENDTIME">daytime of end</string>
	<string name="LANG_STE_DTITLE">Edit sparetime&#8230;</string>
</resources>
